<!--
  ~ Copyright 2015-2019 The twitlatte authors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">twitlatte</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="login">Log in</string>
    <string name="login_description">Select the service you log in with:</string>
    <string name="instance_domain">Instance\'s domain</string>
    <string name="action_settings">Settings…</string>
    <string name="action_change_quality">Change quality</string>
    <string name="use_only_movie_loaded">Use only after movie loaded</string>
    <string name="trends">Trends</string>
    <string name="timeline">Timeline</string>
    <string name="mentions">Mentions</string>
    <string name="post">Post</string>
    <string name="create_post">Create post</string>
    <string name="reply">Reply</string>
    <string name="do_view_reply_to">View replying to</string>
    <string name="mention">Mention</string>
    <string name="following">Following</string>
    <string name="follower">Followers</string>
    <string name="like">Like</string>
    <string name="lists">Lists</string>
    <string name="account">Account</string>
    <string name="dark_theme">Dark theme</string>
    <string name="media">Media</string>
    <string name="add_media">Add media</string>
    <string name="open_media">Open this media</string>
    <string name="possibly_sensitive">Include sensitivity in the medias</string>
    <string name="add_location">Add location</string>
    <string name="following_and_followers">Following and followers</string>
    <string name="retweeted_by">Retweeted by %1$s(%2$s)</string>
    <string name="boosted_by">Boosted by %1$s(%2$s)</string>
    <string name="reply_to">Reply to %s</string>
    <string name="mention_to">Mention to %s</string>
    <string name="application">Application</string>
    <string name="login_with_another_account">Login with another account</string>
    <string name="logout">Logout</string>
    <string name="new_posts">New posts</string>
    <string name="permission_denied">Permission denied</string>
    <string name="lat_and_lon">Latitude:%1$f Longitude: %2$f</string>
    <string name="location_is">Location: %s</string>
    <string name="url_is">URL: %s</string>
    <string name="user_counts_is">%1$,d Posts · %2$,d Following · %3$,d Followers</string>
    <string name="share">Share…</string>
    <string name="open_in_browser">Open in the browser</string>
    <string name="add_to_list">Add to list</string>
    <string name="show_list">Show lists</string>
    <string name="load_more">Load more…</string>
    <string name="create_follow">Follow</string>
    <string name="destroy_follow">Cancel Follow</string>
    <string name="create_mute">Mute</string>
    <string name="destroy_mute">Cancel Mute</string>
    <string name="create_block">Block</string>
    <string name="destroy_block">Cancel Block</string>
    <string name="destroy_follow_follower">Softblock</string>
    <string name="save_image">Save this image</string>
    <string name="save_video">Save this video</string>
    <string name="error_occurred">Error occurred</string>
    <string name="load_timeline_image_mode">Quality of thumbnail on the timeline</string>
    <string name="version_text">Version</string>
    <string name="about">About</string>
    <string name="birthday_of_this_app_is">Birthday of this application:\n%1$TF %1$TT %1$TZ</string>
    <string name="age_of_this_app_is">Age of this application is %d</string>
    <string name="license_at_this_app">License at this application</string>
    <string name="apache_license_2_0" translatable="false">Apache License, Version 2.0</string>
    <string name="open_source_license">Open source license</string>
    <string name="contributors">Contributors</string>
    <string name="open_with_accounts">Open with…</string>
    <string name="settable_account_always_use_in_settings">You can set the default in the settings</string>
    <string name="account_to_use_opening_link">Account to open Twitter link in app</string>
    <string name="open_web_page_in_the_app">Open web pages in the app</string>
    <string name="viewing_web_page_in_app">Viewing web pages in app</string>
    <string name="viewing_web_page_in_external_browser">Viewing web pages in external browser</string>
    <string name="hide_sensitive_media">Blur sensitive medias</string>
    <string name="hiding_sensitive_media">Blurring sensitive medias on the timeline</string>
    <string name="showing_sensitive_media">Not blurring all medias on the timeline</string>
    <string name="back_button_behavior">Behavior of back button</string>
    <string name="always_close_app">Closing this app when back button pressed</string>
    <string name="keep_open_app">Keeping this app opening</string>
    <string name="regex_mute">Regex mute</string>
    <string name="edit_pattern">Edit Regex pattern</string>
    <string name="use_post_regex_mute">Use for the context and hide post</string>
    <string name="post_mute_regex_pattern">Pattern applied to context</string>
    <string name="use_post_regex_mute_show_only_image">Use for the context and show only pictures</string>
    <string name="post_mute_regex_pattern_show_only_image">Pattern applied to context to show image only</string>
    <string name="use_user_screen_name_regex_mute">Use for the screen name and hide post</string>
    <string name="user_screen_name_mute_regex_pattern">Pattern applied to user screen name to hide</string>
    <string name="use_user_name_regex_mute">Use for the user name and hide post</string>
    <string name="user_name_mute_regex_pattern">Pattern applied to user name to hide</string>
    <string name="use_tweet_source_mute">Use for the client name and hide post</string>
    <string name="tweet_source_mute_regex_pattern">Pattern applied to client name to hide</string>
    <string name="muted_post">Muted post</string>
    <string name="post_privacy_is">Post privacy: </string>
    <string name="content_warning">Content warning</string>
    <string name="do_add_content_warning">Add content warning</string>
    <string name="no_app_can_open">No app can open</string>
    <string name="tweet_per_last_24_hours">%,d tweets / last 24 hours</string>
    <string name="do_see_source_code">See source codes of this app</string>
    <string name="description_see_source_code">Hosted on GitHub</string>
    <string name="please_re_login">twitlatte updated some API keys\nPlease login with this account again</string>
    <string name="add_poll">Add poll</string>
    <string name="vote_opening_status">%1$d votes - %2$s</string>
    <string name="vote_closed_status">%d votes - closed</string>
    <string name="poll_n">Poll %d</string>
    <string name="poll_n_optional">Poll %d (Optional)</string>
    <string name="vote_expired_at">Expired at:</string>
    <string name="poll_able_to_choice_multiple">Able to choice multiple</string>
    <string name="poll_hide_totals_until_the_poll_ends">Hide totals until the poll ends</string>
    <string name="follows_you">Follows you</string>
    <string name="you">You</string>

    <string name="do_quote">Quote</string>
    <string name="do_logout">Logout</string>
    <string name="do_discard">Discard</string>
    <string name="do_reply">Reply</string>

    <string name="confirm_logout">Logout?</string>
    <string name="confirm_post_reply">Post this reply?</string>
    <string name="confirm_discard_post">Discard post?</string>
    <string name="confirm_send_invalid_post">Send post?\n\nContent is too much or empty and it may failure</string>

    <string name="confirm_follow">Follow this user?</string>
    <string name="confirm_unfollow">Unfollow this user</string>
    <string name="confirm_mute">Mute this user?</string>
    <string name="confirm_unmute">Unmute this user?</string>
    <string name="confirm_block">Block this user?</string>
    <string name="confirm_unblock">Unblock this user?</string>
    <string name="confirm_destroy_ff">Destroy follow-follower relation to this user?</string>

    <string name="did_post">Posted</string>

    <string name="did_like">Liked</string>
    <string name="did_unlike">Unliked</string>
    <string name="did_retweet">Retweeted</string>
    <string name="did_unretweet">Unretweeted</string>

    <string name="did_favorite">Favorited</string>
    <string name="did_unfavorite">Unfavorited</string>
    <string name="did_boost">Boosted</string>
    <string name="did_unboost">Unboosted</string>
    <string name="did_vote">Voted</string>

    <string name="did_follow">Followed</string>
    <string name="did_unfollow">Unfollowed</string>
    <string name="did_mute">Muted</string>
    <string name="did_unmute">Unmuted</string>
    <string name="did_block">Blocked</string>
    <string name="did_unblock">Unblocked</string>
    <string name="did_destroy_ff">Destroyed follow-follower</string>
    <string name="did_add_to_list">Added to list</string>

    <string name="did_copy">Copied to clip board.</string>

    <string name="twitter" translatable="false">Twitter</string>
    <string name="mastodon" translatable="false">Mastodon</string>

    <string name="use_auth_code">Use OAuth auth code</string>
    <string name="use_another_consumer_token">Use another consumer token</string>

    <string name="mode_image_level_normal">Standard</string>
    <string name="mode_image_level_lowest">Lowest</string>
    <string name="mode_image_level_none">Don\'t load</string>

    <string name="mode_night_no">Not Use</string>
    <string name="mode_night_yes">Use</string>
    <string name="mode_night_follow_system">Follow system settings</string>
    <string name="mode_night_auto">Switch automatically by the time</string>

    <string name="mode_night_no_value" translatable="false">mode_night_no</string>
    <string name="mode_night_auto_value" translatable="false">mode_night_auto</string>
    <string name="mode_night_follow_system_value" translatable="false">mode_night_follow_system</string>
    <string name="mode_night_yes_value" translatable="false">mode_night_yes</string>

    <string name="mode_normal_value" translatable="false">normal</string>
    <string name="mode_lowest_value" translatable="false">lowest</string>
    <string name="mode_none_value" translatable="false">none</string>

    <string name="mode_visibility_public">Public</string>
    <string name="mode_visibility_unlisted">Unlisted</string>
    <string name="mode_visibility_private">Followers only</string>
    <string name="mode_visibility_direct">Direct</string>

    <string name="mode_poll_expired_at_5_minutes">5 minutes</string>
    <string name="mode_poll_expired_at_30_minutes">30 minutes</string>
    <string name="mode_poll_expired_at_1_hour">1 hour</string>
    <string name="mode_poll_expired_at_6_hours">6 hours</string>
    <string name="mode_poll_expired_at_1_day">1 day</string>
    <string name="mode_poll_expired_at_3_days">3 days</string>
    <string name="mode_poll_expired_at_7_days">7 days</string>

    <string name="num_units">KMG</string>
</resources>
