<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015-2018 The twitlatte authors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_tweet_send_layout_root"
    android:orientation="vertical"
    tools:context=".PostActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_tweet_send_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <ImageView
            android:id="@+id/activity_tweet_send_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="32dp"
            tools:src="@mipmap/ic_launcher"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/tweet_text_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginBottom="8dp"
                android:hint="@string/content_warning"
                android:visibility="gone"
                android:inputType="text"
                tools:visibility="visible"/>

            <com.github.moko256.twitlatte.widget.ImageKeyboardEditText
                android:id="@+id/tweet_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tweet_text_warning"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginBottom="8dp"
                tools:hint="@string/post">
                <requestFocus />
            </com.github.moko256.twitlatte.widget.ImageKeyboardEditText>

            <TextView
                android:id="@+id/tweet_text_edit_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tweet_text_edit"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:gravity="end"
                tools:text="0 / 500"/>


            <CheckBox
                android:id="@+id/activity_tweet_add_content_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tweet_text_edit_counter"
                android:layout_marginTop="8dp"
                android:text="@string/do_add_content_warning"/>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_tweet_send_images_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tweet_add_content_warning"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>


            <CheckBox
                android:id="@+id/activity_tweet_is_possibly_sensitive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tweet_send_images_recycler_view"
                android:text="@string/possibly_sensitive"
                android:layout_marginBottom="16dp"/>


            <TextView
                android:id="@+id/activity_tweet_visibility_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tweet_is_possibly_sensitive"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/post_privacy_is"/>

            <Spinner
                android:id="@+id/activity_tweet_visibility_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tweet_is_possibly_sensitive"
                android:layout_alignEnd="@id/activity_tweet_visibility_description"
                android:layout_marginBottom="16dp"
                android:layout_alignParentEnd="true"
                android:entries="@array/choose_visibility_entries"/>


            <CheckBox
                android:id="@+id/activity_tweet_add_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tweet_visibility_spinner"
                android:text="@string/add_location"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/activity_tweet_location_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_tweet_add_location"
                android:layout_marginBottom="16dp"
                tools:text="Latitude: 30, Longitude: 100"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>