<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015-2019 The twitlatte authors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.github.moko256.twitlatte.widget.UserHeaderImageView
        android:id="@+id/show_user_bgimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@color/brown_800" />

    <ImageView
        android:id="@+id/show_user_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/show_user_bgimage"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-44dp"
        android:padding="2dp"
        android:transitionName="icon_image"
        tools:background="?android:attr/colorBackground"
        tools:src="@color/brown_700" />

    <TextView
        android:id="@+id/followed_or_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_name"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-2dp"
        android:layout_toEndOf="@id/show_user_id"
        android:padding="2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="gone"
        tools:text="@string/follows_you"
        tools:visibility="visible" />

    <Button
        android:id="@+id/follow"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_bgimage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_follow"
        android:visibility="gone" />

    <Button
        android:id="@+id/unfollow"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_bgimage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/following"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/show_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        android:textIsSelectable="true"
        tools:text="twitlatte" />

    <TextView
        android:id="@+id/show_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_name"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?android:textColorSecondary"
        android:textIsSelectable="true"
        tools:text="\@twitlatte" />

    <TextView
        android:id="@+id/show_user_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_id"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textIsSelectable="true"
        tools:text="One of the SNS client for Android\n(Description)" />

    <TextView
        android:id="@+id/show_user_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_bio"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:textColorSecondary"
        android:textIsSelectable="true"
        tools:text="📌  Tokyo, Japan" />

    <TextView
        android:id="@+id/show_user_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_location"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:textColorLink"
        android:textIsSelectable="true"
        tools:text="🔗  github.com/moko256/t…" />

    <TextView
        android:id="@+id/show_user_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_url"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:textColorSecondary"
        tools:text="🥡  Since: 2000-00-00 00:00:00 Z" />

    <TextView
        android:id="@+id/show_user_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_user_created_at"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?android:textColorSecondary"
        android:textIsSelectable="true"
        tools:text="260 Tweets · 128 Follows · 256 Following" />
</RelativeLayout>